# Move-Nation-Assistant-bot

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 450259ccb420_add_phone_to_users.py  9b129a22a789_add_synced_at_to_groups.py  cea469ddca08_add_last_message_text_to_groups.py  f85c02f49ec0_initial_schema.py  fee54dee5054_group_members_constraints.py
app/: config.py  logging_config.py  main.py
app/api/: app.py  deps.py  schemas.py
app/bot/: bot_instance.py  guards.py  states.py
app/db/: crud.py  models.py  session.py
app/services/: crypto.py  group_creation_registry.py  group_service.py  realtime.py  reminders.py  scheduler.py  telegram_auth.py  telethon_auth.py
app/userbot/: actions.py
miniapp/: index.html  style.css
miniapp/design-previews/: option-a-native.html  option-b-modern.html  option-b-onboarding.html  option-b-tabs.html  option-c-dark.html  option-d-hybrid.html
miniapp/js/: api.js  card-title.js  connect.js  group-list.js  main.js  mainApp.js  member-list.js  navigation.js  onboarding.js  profile.js  progress.js  realtime.js  render.js  ripple.js  (+8 more)
tests/: bot_fakes.py  conftest.py  test_auth_routes.py  test_bot_add_client.py  test_bot_connect.py  test_bot_group_creation.py  test_bot_messages.py  test_bot_start.py  test_bot_team.py  test_crud.py  test_group_creation_registry.py  test_group_service_sync.py  test_groups_routes.py  test_health_route.py  test_members_routes.py  test_realtime.py  test_realtime_hooks.py  test_reminders.py  test_schemas.py  test_telegram_auth.py  test_telethon_auth.py  test_users_routes.py
(+12 files in other folders)
