[project]
name = "movenation-assistant-bot"
version = "0.1.0"
description = "Telegram bot + Mini App for managing MoveNation client groups"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 110
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "ASYNC",         # async-specific lints
    "SIM",           # simplify
    "RUF",           # ruff-native rules
]
ignore = [
    "E501",  # line length handled by formatter where practical
    # The whole UI/domain vocabulary is Ukrainian (Cyrillic) by design — these
    # "ambiguous unicode" checks exist for typosquatting-style attacks in
    # identifiers, not for a project whose user-facing strings are legitimately
    # non-Latin.
    "RUF001", "RUF002", "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom is `param: T = Depends(...)` — these
# calls are intentionally evaluated once at declaration time, not per-request.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Body", "fastapi.Path"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
files = ["app"]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]
